--- a/exp11.ipynb
+++ b/exp11.ipynb
@@ -25,7 +25,7 @@
     "# Name : VINODHINI K\n",
     "# Reg.No: 212223230245\n",
     "# Step 1: Get the input string\n",
-    "input_string = \"PRIYANKA K\"  # input string\n",
+    "input_string = \"VINODHINI K\"  # input string\n",
     "# Step 2: Calculate frequency of each character in the input string\n",
     "frequency = {}\n",
     "for char in input_string:\n",
