--- a/Ex_11.ipynb
+++ b/Ex_11.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Ex. No: 11\n",
     "# Implementation of HUFFMAN Coding\n",
-    "**Name:** Ashwath M\n",
+    "**Name:** vinodhini k\n",
     "\n",
-    "**Reg No:** 212223230023\n",
+    "**Reg No:** 212223230245\n",
     "\n",
     "**Slot:** 4E6-1"
    ]
