--- a/Ex_11.ipynb
+++ b/Ex_11.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_string = \"vinodhini \""
+    "input_string = \"vino  \""
    ]
   },
   {
@@ -100,12 +100,12 @@
       "Character | Huffman Coding\n",
       "-------------------------\n",
       "    v    |    00\n",
-      "    i    |    010\n",
-      "    d    |    011\n",
-      "    h    |    100\n",
-      "    i     |    101\n",
-      "    o    |    110\n",
-      "    n    |    111\n"
+      "    n    |    010\n",
+      "    i    |    011\n",
+      "         |    100\n",
+      "    o    |    101\n",
+     
+     
      ]
     }
    ],
