--- a/Ex_11.ipynb
+++ b/Ex_11.ipynb
@@ -7,9 +7,9 @@
    "source": [
     "# Ex. No: 11\n",
     "# Implementation of HUFFMAN Coding\n",
-    "**Name:** Ashwath M\n",
+    "**Name:** vishnu km \n",
     "\n",
-    "**Reg No:** 212223230023\n",
+    "**Reg No:** 212223230245\n",
     "\n",
     "**Slot:** 4E6-1"
    ]
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_string = \"ASHWATH M\""
+    "input_string = \"VINODHINI\""
    ]
   },
   {
@@ -99,13 +99,13 @@
      "text": [
       "Character | Huffman Coding\n",
       "-------------------------\n",
-      "    H    |    00\n",
-      "    S    |    010\n",
-      "    W    |    011\n",
-      "    T    |    100\n",
-      "         |    101\n",
-      "    M    |    110\n",
-      "    A    |    111\n"
+      "    V    |    00\n",
+      "    D    |    010\n",
+      "    N    |    011\n",
+      "    H    |    100\n",
+      "    N    |    011\n",
+      "    I    |    110\n",
+      "    O    |    111\n"
      ]
     }
    ],
