--- a/Ex_11.ipynb
+++ b/Ex_11.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Ex. No: 11\n",
     "# Implementation of HUFFMAN Coding\n",
-    "**Name:** vishnu km \n",
+    "**Name:**VINODHINI K\n",
     "\n",
     "**Reg No:** 212223230245\n",
     "\n",
